#!/usr/bin/env tsx

import { RPCClientService, createClient, createGrpcTransport } from "@protosol/api";
import { GetMinimumBalanceForRentExemptionRequest } from "@protosol/api";

const BACKEND_ENDPOINT = "http://localhost:50051";

async function testRPCService() {
  console.log("üîß Testing RPCClientService gRPC connectivity...");
  
  try {
    // Create gRPC transport and client
    const transport = createGrpcTransport({
      baseUrl: BACKEND_ENDPOINT
    });
    
    const client = createClient(RPCClientService, transport);
    
    console.log("‚úÖ gRPC client created successfully");
    
    // Test 1: GetMinimumBalanceForRentExemption
    console.log("\nüß™ Test 1: GetMinimumBalanceForRentExemption");
    const rentResp = await client.getMinimumBalanceForRentExemption({
      dataLength: BigInt(0), // Basic account (0 bytes)
      commitmentLevel: 2 // CONFIRMED
    });
    
    console.log("‚úÖ GetMinimumBalanceForRentExemption successful:");
    console.log(`   Minimum Balance: ${rentResp.balance} lamports`);
    
    // Test with different data lengths
    console.log("\nüß™ Test 2: GetMinimumBalanceForRentExemption (Token Account)");
    const tokenAccountRent = await client.getMinimumBalanceForRentExemption({
      dataLength: BigInt(165), // SPL Token account size
      commitmentLevel: 2 // CONFIRMED
    });
    
    console.log("‚úÖ GetMinimumBalanceForRentExemption (Token Account) successful:");
    console.log(`   Minimum Balance: ${tokenAccountRent.balance} lamports`);
    
    // Validate responses
    console.log("\n‚úÖ Response validation:");
    console.log(`   Basic account rent > 0: ${rentResp.balance > 0n}`);
    console.log(`   Token account rent > basic: ${tokenAccountRent.balance > rentResp.balance}`);
    
    // Test 3: Test error handling with invalid data
    console.log("\nüß™ Test 3: Error handling test");
    try {
      await client.getMinimumBalanceForRentExemption({
        dataLength: BigInt(-1), // Invalid data length
        commitmentLevel: 2 // CONFIRMED
      });
      console.log("‚ö†Ô∏è  Expected error not thrown for invalid data length");
    } catch (error: any) {
      console.log("‚úÖ Error handling working correctly:", error.message);
    }
    
    console.log("\nüéâ RPCClientService tests completed successfully!");
    return true;
    
  } catch (error: any) {
    console.error("‚ùå RPCClientService test failed:", error);
    console.error("   Stack:", error.stack);
    return false;
  }
}

// Run the test if this script is executed directly
if (import.meta.url === `file://${process.argv[1]}`) {
  testRPCService()
    .then(success => {
      console.log(success ? "\n‚úÖ All tests passed!" : "\n‚ùå Tests failed!");
      process.exit(success ? 0 : 1);
    })
    .catch(error => {
      console.error("‚ùå Unexpected error:", error);
      process.exit(1);
    });
}

export { testRPCService };